// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should increment the counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    ProductCard
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard should render the component correctly 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Cardu
  </h1>
</div>
`;
